--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=board-server
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/board
+spring.datasource.username=developer
+spring.datasource.password=12345
+mybatis.mapper-locations=classpath:com.example.boardserver.mapper/*.xml
