enh: 게시판 API - Category 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/board
 spring.datasource.username=developer
 spring.datasource.password=12345
+spring.datasource.hikari.maxLifetime=1800000
 mybatis.mapper-locations=classpath:com.example.boardserver.mapper/*.xml
