--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.username=developer
 spring.datasource.password=12345
 spring.datasource.hikari.maxLifetime=1800000
 mybatis.mapper-locations=classpath:com.example.boardserver.mapper/*.xml
+
+# redis
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6380
+spring.data.redis.password=
+spring.data.redis.repositories.enabled=false
+expire.defaultTime=3600
