--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.1.0'
 
+    //validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     runtimeOnly("com.mysql:mysql-connector-j")
 
