enh :알림 기능 개발 - AWS SNS 연동 및 데모 실습

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
-spring.application.name=board-server
-# mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/board
-spring.datasource.username=developer
-spring.datasource.password=12345
-spring.datasource.hikari.maxLifetime=1800000
-mybatis.mapper-locations=classpath:com.example.boardserver.mapper/*.xml
+spring.application.name=${SPRING_APPLICATION_NAME}
 
-# redis
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6380
-spring.data.redis.password=
-spring.data.redis.repositories.enabled=false
-expire.defaultTime=3600
+# MySQL
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.jdbc-url=${SPRING_DATASOURCE_JDBC_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.hikari.maxLifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFETIME}
+mybatis.mapper-locations=${MYBATIS_MAPPER_LOCATIONS}
+
+# Redis
+spring.cache.type=${SPRING_CACHE_TYPE}
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
+spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD}
+spring.data.redis.repositories.enabled=${SPRING_DATA_REDIS_REPOSITORIES_ENABLED}
+expire.defaultTime=${EXPIRE_DEFAULT_TIME}
+
+# AWS SNS
+sns.topic.arn=${SNS_TOPIC_ARN}
+aws.accessKey=${AWS_ACCESS_KEY}
+aws.secretKey=${AWS_SECRET_KEY}
+aws.region=${AWS_REGION}
+cloud.aws.region.static=${CLOUD_AWS_REGION_STATIC}
+cloud.aws.stack.auto=${CLOUD_AWS_STACK_AUTO}
