--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    all {
+        exclude group : 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -22,6 +25,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'me.paulschwarz:spring-dotenv:4.0.0' // spring-dotenv
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
@@ -29,15 +34,19 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.1.2'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.1.0'
-
-    //validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-validation' //validation
+    // aws sns
+    implementation 'software.amazon.awssdk:sns'
+    implementation platform('software.amazon.awssdk:bom:2.5.29')
 
     runtimeOnly("com.mysql:mysql-connector-j")
-
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compileOnly 'org.projectlombok:lombok'
+    compileOnly group: 'org.springframework.cloud', name:'spring-cloud-aws-messaging', version: '2.2.1.RELEASE'
+    compileOnly group: 'org.springframework.cloud', name:'spring-cloud-aws-autoconfigure', version: '2.2.1.RELEASE'
+
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
