--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ aws.secretKey=${AWS_SECRET_KEY}
 aws.region=${AWS_REGION}
 cloud.aws.region.static=${CLOUD_AWS_REGION_STATIC}
 cloud.aws.stack.auto=${CLOUD_AWS_STACK_AUTO}
+
+slack.token=${SLACK_TOKEN}
+slack.webhook.url=${SLACK_WEBHOOK_URL}
