update: ADD README.md 파일

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     // slack
     implementation 'com.slack.api:bolt:1.18.0'
     implementation 'com.slack.api:bolt-servlet:1.18.0'
-    implementation 'com.slack.api:bolt-jetty:1.18.0'
+//    implementation 'com.slack.api:bolt-jetty:1.18.0'
 
     runtimeOnly("com.mysql:mysql-connector-j")
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
